--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,20 @@
     "favicon.ico", "%PUBLIC_URL%/favicon.ico" will work correctly both with
     client-side routing and a non-root public URL. Learn how to configure a
     non-root public URL by running `npm run build`. -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-P2QV3LZH5Y"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-P2QV3LZH5Y");
+    </script>
     <title>Ruleau | Finance</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
